--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,36 @@
-<app-sales-chart/>
+<div class="wrapper">
+    <header>
+        <div class="container-fluid">
+            <div class='top'>               
+            </div>
+            <div class='text'>
+                <h1>sales manager</h1>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <app-sales-chart/>
+        </div>
+    </main>
+    <footer class="text-center text-lg-start text-white">
+        <hr class="my-3">
+          <!-- Section: Copyright -->
+          <section class="p-3 pt-0">
+            <div class="row d-flex align-items-center">
+              <!-- Grid column -->
+              <div class="col-md-7 col-lg-8 text-center text-md-start">
+                <!-- Copyright -->
+                <div class="p-3">
+                  © 2024 Copyright:
+                  <a class="text-white" href="https://mdbootstrap.com/">
+                    _MB_
+                  </a>
+                </div>
+                <!-- Copyright -->
+              </div>
+            </div>
+          </section>
+          <!-- Section: Copyright -->
+      </footer>
+</div>
